added c/f links & conversion math

--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,12 @@ li::first-letter {
   top: -34px;
   padding-left: 5px;
 }
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+  text-decoration: none;
+}
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
